--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_login">Login</string>
     <string name="title_activity_signup">Sign Up</string>
     <string name="icon_description">Icon description</string>
+    <string name="error_message_name_empty">Icon description</string>
 </resources>
