--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">ChronoMetron</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_signup">Sign Up</string>
+    <string name="icon_description">Icon description</string>
+    <string name="error_message_name_empty">Icon description</string>
+    <string name="login_title">Login</string>
+    <string name="signup_title">Sign Up</string>
 </resources>
